--- a/faq.html
+++ b/faq.html
@@ -190,7 +190,7 @@
 				</section>
 
 
-				<section class="add_question bg_white">
+				<section class="add_question bg_white animate fadeInUp">
 					<div class="cont">
 						<button class="btn modal_btn" data-modal="#question_modal">
 							<img data-src="images/ic_question.png" alt="" class="lazyload">
