--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 				<section class="first_section">
 					<div class="cont row">
-						<div class="data">
+						<div class="data animate fadeInLeft">
 							<div class="notice">
 								<img src="images/ic_notice.png" alt="" class="icon">
 								<div class="name">Только 5% пациентов</div>
@@ -135,7 +135,7 @@
 							</div>
 						</div>
 
-						<div class="image">
+						<div class="image animate fadeInRight">
 							<img data-src="images/first_section_img.png" alt="" class="lazyload">
 						</div>
 					</div>
@@ -151,7 +151,7 @@
 						</div>
 
 						<div class="data">
-							<div class="item blue">
+							<div class="item blue animate fadeInLeft delay">
 								<div class="title">Регулирование<br> пищевого поведения</div>
 
 								<div class="items">
@@ -161,11 +161,11 @@
 								</div>
 							</div>
 
-							<div class="image">
+							<div class="image animate">
 								<img data-src="images/about_info_img.png" alt="" class="lazyload">
 							</div>
 
-							<div class="item pink">
+							<div class="item pink animate fadeInRight delay">
 								<div class="title">Восстановление<br> метаболического здоровья</div>
 
 								<div class="items">
@@ -193,7 +193,7 @@
 						</div>
 
 						<div class="row">
-							<div class="item">
+							<div class="item animate fadeInUp">
 								<div class="icon">
 									<img data-src="images/ic_effectiveness1.svg" alt="" class="lazyload">
 								</div>
@@ -201,7 +201,7 @@
 								<div>Эффективное снижение<br> веса у 9 из 10 человек</div>
 							</div>
 
-							<div class="item">
+							<div class="item animate fadeInUp delay">
 								<div class="icon">
 									<img data-src="images/ic_effectiveness2.png" alt="" class="lazyload">
 								</div>
@@ -209,7 +209,7 @@
 								<div>Сокращение объема<br> потребляемой пищи</div>
 							</div>
 
-							<div class="item">
+							<div class="item animate fadeInUp delay2">
 								<div class="icon">
 									<img data-src="images/ic_effectiveness3.svg" alt="" class="lazyload">
 								</div>
@@ -228,12 +228,12 @@
 						<div class="block_title">Удобная схема применения</div>
 
 						<div class="row">
-							<div class="tablet">
+							<div class="tablet animate fadeInLeft">
 								<div class="amount">1</div>
 								<div>Таблетка<br> в день</div>
 							</div>
 
-							<div class="desc">
+							<div class="desc animate fadeInRight">
 								<p>Следует принимать утром, не разжевывая и запивая достаточным количеством жидкости (стакан воды).</p>
 
 								<p>Можно принимать как натощак, так и сочетать с приемом пищи.</p>
@@ -243,7 +243,7 @@
 				</section>
 
 
-				<section class="add_question">
+				<section class="add_question animate fadeInUp delay">
 					<div class="cont">
 						<button class="btn modal_btn" data-modal="#question_modal">
 							<img data-src="images/ic_question.png" alt="" class="lazyload">
