--- a/index2.html
+++ b/index2.html
@@ -97,7 +97,7 @@
 
 				<section class="first_section_2">
 					<div class="cont row">
-						<div class="data">
+						<div class="data animate fadeInLeft">
 							<div class="title">
 								<span>Редуксин<sup>&reg;</sup></span><br>
 								Препарат №1<br>
@@ -128,7 +128,7 @@
 							</div>
 						</div>
 
-						<div class="image">
+						<div class="image animate fadeInRight">
 							<img data-src="images/first_section_img2.png" alt="" class="lazyload">
 						</div>
 					</div>
@@ -144,7 +144,7 @@
 						</div>
 
 						<div class="data">
-							<div class="item">
+							<div class="item animate fadeInLeft delay">
 								<div class="icon">
 									<img data-src="images/ic_about_info_2_1.png" alt="" class="lazyload">
 								</div>
@@ -158,11 +158,11 @@
 								</div>
 							</div>
 
-							<div class="image">
+							<div class="image animate">
 								<img data-src="images/about_info_img_2.png" alt="" class="lazyload">
 							</div>
 
-							<div class="item">
+							<div class="item animate fadeInRight delay">
 								<div class="icon">
 									<img data-src="images/ic_about_info_2_2.png" alt="" class="lazyload">
 								</div>
@@ -187,7 +187,7 @@
 						</div>
 
 						<div class="row">
-							<div class="item">
+							<div class="item animate fadeInUp">
 								<div class="icon">
 									<img data-src="images/ic_effectiveness2_1.png" alt="" class="lazyload">
 								</div>
@@ -197,7 +197,7 @@
 								<div>Увеличивается<br> продолжительность жизни</div>
 							</div>
 
-							<div class="item">
+							<div class="item animate fadeInUp delay">
 								<div class="icon">
 									<img data-src="images/ic_effectiveness2_2.png" alt="" class="lazyload">
 								</div>
@@ -207,7 +207,7 @@
 								<div>Снижаются риски развития<br> сахарного диабета 2 типа</div>
 							</div>
 
-							<div class="item">
+							<div class="item animate fadeInUp delay2">
 								<div class="icon">
 									<img data-src="images/ic_effectiveness2_3.png" alt="" class="lazyload">
 								</div>
@@ -218,7 +218,7 @@
 							</div>
 						</div>
 
-						<div class="bottom">
+						<div class="bottom animate fadeInUp delay3">
 							<div>
 								<img data-src="images/ic_effectiveness_2_bottom.svg" alt="" class="icon lazyload">
 								<div class="name">95% пациентов без фармакотерапии</div>
@@ -236,12 +236,12 @@
 						<div class="block_title">Удобная схема применения</div>
 
 						<div class="row">
-							<div class="tablet">
+							<div class="tablet animate fadeInLeft">
 								<div class="amount">1</div>
 								<div>Таблетка<br> в день</div>
 							</div>
 
-							<div class="desc">
+							<div class="desc animate fadeInRight">
 								<p>Следует принимать утром, не разжевывая и запивая достаточным количеством жидкости (стакан воды).</p>
 
 								<p>Можно принимать как натощак, так и сочетать с приемом пищи.</p>
@@ -251,7 +251,7 @@
 				</section>
 
 
-				<section class="add_question blue">
+				<section class="add_question blue animate fadeInUp delay">
 					<div class="cont">
 						<button class="btn modal_btn" data-modal="#question_modal">
 							<img data-src="images/ic_question2.png" alt="" class="lazyload">
