--- a/index2.html
+++ b/index2.html
@@ -129,7 +129,7 @@
 						</div>
 
 						<div class="image animate fadeInRight">
-							<img data-src="images/first_section_img2.png" alt="" class="lazyload">
+							<img src="images/first_section_img2.png" alt="">
 						</div>
 					</div>
 
