--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 						</div>
 
 						<div class="image animate fadeInRight">
-							<img data-src="images/first_section_img.png" alt="" class="lazyload">
+							<img src="images/first_section_img.png" alt="">
 						</div>
 					</div>
 
