Изменения первого блока

--- a/index.html
+++ b/index.html
@@ -99,9 +99,8 @@
 					<div class="cont row">
 						<div class="data animate fadeInLeft">
 							<div class="notice">
-								<img src="images/ic_notice.png" alt="" class="icon">
 								<div class="name">Только 5% пациентов</div>
-								<div>достигают успеха в снижении веса без фармакотерапии</div>
+								<div>Достигают успеха в снижении веса без фармакотерапии</div>
 							</div>
 
 							<div class="title">
