--- a/demo_links.html
+++ b/demo_links.html
@@ -188,6 +188,8 @@
 				<li><a href="./index.html" target="_blank">Главная страница</a></li>
 				<li><a href="./index2.html" target="_blank">Главная страница 2</a></li>
 				<li><a href="./faq.html" target="_blank">Вопрос ответ</a></li>
+				<li><a href="./about.html" target="_blank">О препарате</a></li>
+				<li><a href="./research.html" target="_blank">МАТЕРИАЛЫ И ИССЛЕДОВАНИЯ</a></li>
 			</ol>
 		</div>
 	</body>
