--- a/demo_links.html
+++ b/demo_links.html
@@ -190,6 +190,7 @@
 				<li><a href="./faq.html" target="_blank">Вопрос ответ</a></li>
 				<li><a href="./about.html" target="_blank">О препарате</a></li>
 				<li><a href="./research.html" target="_blank">МАТЕРИАЛЫ И ИССЛЕДОВАНИЯ</a></li>
+				<li><a href="./why.html" target="_blank">ПОЧЕМУ ВЕС НЕ СНИЖАЕТСЯ?</a></li>
 			</ol>
 		</div>
 	</body>
