Новая страница + правки

--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
 
 								<div class="tab_content level1 active" id="tab1">
 									<div class="instructions">
-										<div class="title">ИНСТРУКЦИЯ ПО ПРИМЕНЕНИЮ</div>
+										<div class="title" id="anchor1">ИНСТРУКЦИЯ ПО ПРИМЕНЕНИЮ</div>
 
 										<div class="features">
 											<div>
@@ -193,10 +193,10 @@
 									</div>
 
 
-									<div class="pharm_props">
+									<div class="pharm_props" id="anchor2">
 										<div class="title">ФАРМАКОЛОГИЧЕСКИЕ СВОЙСТВА</div>
 
-										<div class="title2">Фармакодинамика </div>
+										<div class="title2">Фармакодинамика</div>
 
 										<div class="item">
 											<div class="name">Метформин</div>
@@ -230,33 +230,33 @@
 
 
 							<aside>
-								<div class="links">
-									<div><a href="/">Инструкция по применению</a></div>
-									<div><a href="/">Регистрационный номер</a></div>
-									<div><a href="/">Торговое наименование препарата</a></div>
-									<div><a href="/">Международное непатентованное или группировочное наименование</a></div>
-									<div><a href="/">Лекарственная форма</a></div>
-									<div><a href="/">Состав</a></div>
-									<div><a href="/">Описание</a></div>
-									<div><a href="/">Фармакотерапевтическая группа</a></div>
-									<div><a href="/">Код ATX</a></div>
-									<div><a href="/">Фармакологические свойства</a></div>
-									<div><a href="/">Показания к применению</a></div>
-									<div><a href="/">Противопоказания</a></div>
-									<div><a href="/">С осторожностью</a></div>
-									<div><a href="/">Применение при беременности и в период грудного вскармливания</a></div>
-									<div><a href="/">Способ применения и дозы</a></div>
-									<div><a href="/">Побочное действие</a></div>
-									<div><a href="/">Передозировка</a></div>
-									<div><a href="/">Взаимодействие с другими лекарственными средствами</a></div>
-									<div><a href="/">Особые указания</a></div>
-									<div><a href="/">Влияние на способность управлять транспортными средствами и механизмами</a></div>
-									<div><a href="/">Форма выпуска</a></div>
-									<div><a href="/">Условия хранения</a></div>
-									<div><a href="/">Срок годности</a></div>
-									<div><a href="/">Условия отпуска</a></div>
-									<div><a href="/">Производитель</a></div>
-									<div><a href="/">Наименование, адрес и телефон уполномоченной организации для контактов (направление претензий и рекламаций)</a></div>
+								<div class="links sticky">
+									<div><button class="scroll_btn" data-anchor="#anchor1">Инструкция по применению</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor2">Регистрационный номер</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor3">Торговое наименование препарата</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor4">Международное непатентованное или группировочное наименование</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor5">Лекарственная форма</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor6">Состав</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor7">Описание</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor8">Фармакотерапевтическая группа</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor9">Код ATX</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor10">Фармакологические свойства</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor11">Показания к применению</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor12">Противопоказания</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor13">С осторожностью</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor14">Применение при беременности и в период грудного вскармливания</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor15">Способ применения и дозы</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor16">Побочное действие</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor17">Передозировка</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor18">Взаимодействие с другими лекарственными средствами</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor19">Особые указания</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor20">Влияние на способность управлять транспортными средствами и механизмами</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor21">Форма выпуска</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor22">Условия хранения</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor23">Срок годности</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor24">Условия отпуска</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor25">Производитель</button></div>
+									<div><button class="scroll_btn" data-anchor="#anchor26">Наименование, адрес и телефон уполномоченной организации для контактов (направление претензий и рекламаций)</button></div>
 								</div>
 							</aside>
 						</div>
@@ -379,6 +379,7 @@
 		<script src="js/jquery-3.5.0.min.js"></script>
 		<script src="js/inputmask.min.js"></script>
 		<script src="js/fancybox.min.js"></script>
+		<script src="js/sticky-kit.min.js"></script>
 		<script src="js/functions.js"></script>
 		<script src="js/scripts.js"></script>
 	</body>
