--- a/research.html
+++ b/research.html
@@ -110,7 +110,7 @@
 
 							<div class="tab_content level1 active" id="tab1">
 								<div class="items">
-									<a href="/" class="item">
+									<a href="/" class="item" download>
 										<div class="icon">
 											<img data-src="images/ic_pdf.png" alt="" class="lazyload">
 										</div>
@@ -139,7 +139,7 @@
 										</div>
 									</div>
 
-									<a href="/" class="item">
+									<a href="/" class="item" download>
 										<div class="icon">
 											<img data-src="images/ic_pdf.png" alt="" class="lazyload">
 										</div>
@@ -294,6 +294,7 @@
 		<script src="js/jquery-3.5.0.min.js"></script>
 		<script src="js/inputmask.min.js"></script>
 		<script src="js/fancybox.min.js"></script>
+		<script src="js/sticky-kit.min.js"></script>
 		<script src="js/functions.js"></script>
 		<script src="js/scripts.js"></script>
 	</body>
