--- a/why.html
+++ b/why.html
@@ -97,10 +97,10 @@
 
 				<section class="why_head">
 					<div class="cont">
-						<h1 class="page_title">ПОЧЕМУ ВЕС<br> НЕ СНИЖАЕТСЯ?</h1>
+						<h1 class="page_title animate fadeInLeft">ПОЧЕМУ ВЕС<br> НЕ СНИЖАЕТСЯ?</h1>
 
 						<div class="row">
-							<div class="item">
+							<div class="item animate fadeInUp delay">
 								<div class="icon">
 									<img data-src="images/ic_why1_1.png" alt="" class="lazyload">
 									<img src="images/ic_why1_2.png" alt="">
@@ -109,7 +109,7 @@
 								<div>Избыточное потребление пищи</div>
 							</div>
 
-							<div class="item">
+							<div class="item animate fadeInUp delay2">
 								<div class="icon">
 									<img data-src="images/ic_why2_1.png" alt="" class="lazyload">
 									<img src="images/ic_why2_2.png" alt="">
@@ -118,7 +118,7 @@
 								<div>Нарушение пищевого поведения</div>
 							</div>
 
-							<div class="item">
+							<div class="item animate fadeInUp delay3">
 								<div class="icon">
 									<img data-src="images/ic_why3_1.png" alt="" class="lazyload">
 									<img src="images/ic_why3_2.png" alt="">
@@ -127,7 +127,7 @@
 								<div>Низкая физическая активность</div>
 							</div>
 
-							<div class="item">
+							<div class="item animate fadeInUp delay4">
 								<div class="icon">
 									<img data-src="images/ic_why4_1.png" alt="" class="lazyload">
 									<img src="images/ic_why4_2.png" alt="">
@@ -136,7 +136,7 @@
 								<div>Наследственный фактор</div>
 							</div>
 
-							<div class="item">
+							<div class="item animate fadeInUp delay5">
 								<div class="icon">
 									<img data-src="images/ic_why5_1.png" alt="" class="lazyload">
 									<img src="images/ic_why5_2.png" alt="">
@@ -145,7 +145,7 @@
 								<div>Хронический стресс</div>
 							</div>
 
-							<div class="item">
+							<div class="item animate fadeInUp delay6">
 								<div class="icon">
 									<img data-src="images/ic_why6_1.png" alt="" class="lazyload">
 									<img src="images/ic_why6_2.png" alt="">
@@ -165,7 +165,7 @@
 						<div class="block_title">Для эффективного снижения массы тела рекомендуется</div>
 
 						<div class="row">
-							<div class="item">
+							<div class="item animate fadeInLeft">
 								<div class="head">
 									<div class="icon">
 										<img data-src="images/ic_why_recommended1.png" alt="" class="lazyload">
@@ -190,7 +190,7 @@
 								</div>
 							</div>
 
-							<div class="item">
+							<div class="item animate fadeInRight">
 								<div class="head">
 									<div class="icon">
 										<img data-src="images/ic_why_recommended2.png" alt="" class="lazyload">
@@ -222,11 +222,11 @@
 				<section class="why_recommendations">
 					<div class="cont row">
 						<div class="data">
-							<div class="block_title">Рекомендации</div>
+							<div class="block_title animate fadeInUp">Рекомендации</div>
 
-							<div class="desc">Согласно современным рекомендациям по лечению избыточного веса и ожирения на фоне диеты и физической нагрузки, сразу назначается медикаментозная терапия</div>
+							<div class="desc animate fadeInUp delay">Согласно современным рекомендациям по лечению избыточного веса и ожирения на фоне диеты и физической нагрузки, сразу назначается медикаментозная терапия</div>
 
-							<div class="not_recommended">
+							<div class="not_recommended animate fadeInUp delay2">
 								<div class="icon">
 									<img data-src="images/ic_not_recommended.png" alt="" class="lazyload">
 								</div>
@@ -235,7 +235,7 @@
 							</div>
 						</div>
 
-						<div class="percents">
+						<div class="percents animate fadeInRight delay3">
 							<div class="item red">
 								<div class="val big">
 									<img data-src="images/percents_95.png" alt="" class="lazyload">
@@ -258,7 +258,7 @@
 
 				<section class="reduxin_block">
 					<div class="cont row">
-						<div class="data">
+						<div class="data animate fadeInLeft">
 							<div class="title">Редуксин<sup>&reg;</sup> <span>Форте</span></div>
 
 							<div class="desc">
@@ -268,8 +268,8 @@
 							</div>
 						</div>
 
-						<div class="image">
-							<img data-src="images/reduxin_block_img.png" alt="" class="lazyload">
+						<div class="image animate fadeInRight">
+							<img src="images/reduxin_block_img.png" alt="">
 						</div>
 					</div>
 				</section>
@@ -280,15 +280,15 @@
 						<div class="block_title">Доказанная эффективность</div>
 
 						<div class="row">
-							<img data-src="images/proven_effectiveness_img.png" alt="" class="img lazyload">
+							<img src="images/proven_effectiveness_img.png" alt="" class="img animate fadeInLeft">
 
-							<div class="months">
+							<div class="months animate fadeInUp delay">
 								<div class="title">3 месяца</div>
 
 								<div class="desc">Стойкий и заметный результат уже через 3 месяца терапии.</div>
 							</div>
 
-							<div class="months">
+							<div class="months animate fadeInUp delay2">
 								<div class="title blue">6 месяцев</div>
 
 								<div class="desc">90% пациентов за 6 месяцев достигли:</div>
@@ -312,7 +312,7 @@
 						</div>
 
 
-						<div class="directions_wrap">
+						<div class="directions_wrap animate fadeInUp">
 							<div class="title">В отличие от других препаратов<br> для снижения веса — уже с первого дня терапии работает сразу<br> в 2 направлениях:</div>
 
 							<div class="directions">
@@ -370,9 +370,9 @@
 						<div class="block_title">Доказанная безопасность</div>
 
 						<div class="row">
-							<div class="desc">Даже в группах пациентов с высоким риском осложнений, не оказывает негативного влияния на сердечно-сосудистую систему</div>
+							<div class="desc animate fadeInUp">Даже в группах пациентов с высоким риском осложнений, не оказывает негативного влияния на сердечно-сосудистую систему</div>
 
-							<img data-src="images/proven_safety_img.png" alt="" class="lazyload img">
+							<img src="images/proven_safety_img.png" alt="" class="img animate fadeInRight">
 						</div>
 					</div>
 				</section>
@@ -483,6 +483,7 @@
 		<script src="js/jquery-3.5.0.min.js"></script>
 		<script src="js/inputmask.min.js"></script>
 		<script src="js/fancybox.min.js"></script>
+		<script src="js/sticky-kit.min.js"></script>
 		<script src="js/functions.js"></script>
 		<script src="js/scripts.js"></script>
 	</body>
