--- a/demo_links.html
+++ b/demo_links.html
@@ -191,6 +191,7 @@
 				<li><a href="./about.html" target="_blank">О препарате</a></li>
 				<li><a href="./research.html" target="_blank">МАТЕРИАЛЫ И ИССЛЕДОВАНИЯ</a></li>
 				<li><a href="./why.html" target="_blank">ПОЧЕМУ ВЕС НЕ СНИЖАЕТСЯ?</a></li>
+				<li><a href="./programs.html" target="_blank">НАБЛЮДАТЕЛЬНЫЕ ПРОГРАММЫ</a></li>
 			</ol>
 		</div>
 	</body>
