--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
 		<script src="js/jquery-3.5.0.min.js"></script>
 		<script src="js/inputmask.min.js"></script>
 		<script src="js/fancybox.min.js"></script>
+		<script src="js/sticky-kit.min.js"></script>
 		<script src="js/functions.js"></script>
 		<script src="js/scripts.js"></script>
 	</body>
