--- a/programs.html
+++ b/programs.html
@@ -39,7 +39,7 @@
 	</head>
 
 	<body>
-		<div class="wrap bg2">
+		<div class="wrap bg3">
 			<div class="main">
 				<header>
 					<div class="cont row">
@@ -65,7 +65,7 @@
 							<div class="sep"></div>
 
 							<div class="menu_item">
-								<a href="/"><span>Вопрос-Ответ</span></a>
+								<a class="active"><span>Вопрос-Ответ</span></a>
 							</div>
 
 							<div class="sep"></div>
@@ -95,166 +95,113 @@
 				</header>
 
 
-				<section class="first_section_2">
-					<div class="cont row">
-						<div class="data animate fadeInLeft">
-							<div class="title">
-								<span>Редуксин<sup>&reg;</sup></span><br>
-								Препарат №1<br>
-								для снижения веса в России*
-							</div>
-
-							<div class="pluses">
-								<div>
-									<div class="icon">
-										<img data-src="images/ic_pluses2_1.png" alt="" class="lazyload">
-									</div>
-									<span>Уменьшение чувства голода и контроль аппетита<sup>1,2</sup></span>
-								</div>
-
-								<div>
-									<div class="icon">
-										<img data-src="images/ic_pluses2_2.png" alt="" class="lazyload">
-									</div>
-									<span>Эффективное снижение и удержание веса<sup>3</sup></span>
-								</div>
-
-								<div>
-									<div class="icon">
-										<img data-src="images/ic_pluses2_3.svg" alt="" class="lazyload">
-									</div>
-									<span>Благоприятный профиль безопасности<sup>3</sup></span>
-								</div>
-							</div>
-						</div>
-
-						<div class="image animate fadeInRight">
-							<img src="images/first_section_img2.png" alt="">
-						</div>
-					</div>
-
-					<img data-src="images/bg_wave.png" alt="" class="bg lazyload">
-				</section>
-
-
-				<section class="about_info_2">
+				<section class="programs">
 					<div class="cont">
-						<div class="block_title">
-							<span>Редуксин<sup>&reg;</sup></span> — обладает уникальным механизмом действия 2,3,11
+						<div class="page_head">
+							<h1 class="page_title">НАБЛЮДАТЕЛЬНЫЕ ПРОГРАММЫ</h1>
 						</div>
 
-						<div class="data">
-							<div class="item animate fadeInLeft delay">
-								<div class="icon">
-									<img data-src="images/ic_about_info_2_1.png" alt="" class="lazyload">
-								</div>
-
-								<div class="title">Ускоряет наступление<br> чувства насыщения</div>
-
-								<div class="items">
-									<div>Уменьшает количество<br> съедаемой пищи</div>
-									<div>Снижает поступление<br> калорий на 25%</div>
-									<div>Способствует удержанию<br> сниженной массы тела</div>
-								</div>
+						<div class="program">
+							<div class="logo">
+								<img data-src="images/program_logo1.png" alt="" class="lazyload">
 							</div>
 
-							<div class="image animate">
-								<img data-src="images/about_info_img_2.png" alt="" class="lazyload">
-							</div>
+							<div class="data">
+								<div class="program_name">ВСЕРОССИЙСКАЯ НАБЛЮДАТЕЛЬНАЯ ПРОГРАММА «ВЕСНА»</div>
 
-							<div class="item animate fadeInRight delay">
-								<div class="icon">
-									<img data-src="images/ic_about_info_2_2.png" alt="" class="lazyload">
+								<div class="text_block">
+									<p>Всероссийская наблюдательная неинтервенционная программа мониторинга безопасности применения препарата Редуксин® (сибутрамин + МКЦ) для снижения массы тела и сохранения достигнутого уменьшения веса при 6-месячном курсе медикаментозной терапии больных с алиментарным ожирением в рутинной клинической практике («Весна»)</p>
+
+									<p>Под эгидой ГБОУ ДПО «Российская медицинская академия последипломного образования» МЗ РФ, главный исследователь Аметов А.С.</p>
+
+									<p><b style="color: #406194;">1520 врачей</b> различных специальностей: эндокринологи, терапевты, гастроэнтерологи, гинекологи, неврологи и кардиологи</p>
+
+									<p><b style="color: #406194;">34 719 пациентов</b></p>
+
+									<p><b style="color: #406194;">52 города РФ</b></p>
 								</div>
 
-								<div class="title">Повышает внутренний<br> расход энергии</div>
+								<div class="results">
+									<div class="title">ОСНОВНЫЕ РЕЗУЛЬТАТЫ:</div>
 
-								<div class="items">
-									<div>Усиливает<br> термогенез</div>
-									<div>Активирует расщепление<br> жировой ткани</div>
-									<div>Повышает эффективность<br> снижения массы тела</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</section>
+									<div class="text_block">
+										<p><b>На фоне терапии Редуксином<sup>&reg;</sup></b></p>
 
-
-				<section class="effectiveness_2">
-					<div class="cont">
-						<div class="block_title">
-							Снижение массы тела уменьшает риск развития серьезных заболеваний<br> и увеличивает продолжительность жизни
-						</div>
-
-						<div class="row">
-							<div class="item animate fadeInUp">
-								<div class="icon">
-									<img data-src="images/ic_effectiveness2_1.png" alt="" class="lazyload">
+										<ul>
+											<li><b style="color: #406194;">Более 90%</b> достоверно снизили вес (в среднем более, чем на 10 кг)</li>
+											<li><b style="color: #406194;">Почти 80%</b> пациентов выработали правильные привычки питания и возможность управления чувством голода</li>
+											<li><b style="color: #406194;">70% пациентов</b> добились нормализации обмена веществ : улучшились показатели углеводного и липидного обменов</li>
+											<li>Отмечен <b style="color: #406194;">благоприятный профиль безопасности</b></li>
+										</ul>
+									</div>
 								</div>
 
-								<div class="val">НА 20%</div>
+								<div class="download">
+									<div><a href="/">
+										<div class="icon">
+											<img data-src="images/ic_pdf.png" alt="" class="lazyload">
+										</div>
 
-								<div>Увеличивается<br> продолжительность жизни</div>
-							</div>
-
-							<div class="item animate fadeInUp delay">
-								<div class="icon">
-									<img data-src="images/ic_effectiveness2_2.png" alt="" class="lazyload">
+										<span>Отчет национального координатора Всероссийской наблюдательной программы «Весна»</span>
+									</a></div>
 								</div>
-
-								<div class="val">НА 30%</div>
-
-								<div>Снижаются риски развития<br> сахарного диабета 2 типа</div>
-							</div>
-
-							<div class="item animate fadeInUp delay2">
-								<div class="icon">
-									<img data-src="images/ic_effectiveness2_3.png" alt="" class="lazyload">
-								</div>
-
-								<div class="val">НА 40%</div>
-
-								<div>Удержание веса<br> в течение года года</div>
 							</div>
 						</div>
 
-						<div class="bottom animate fadeInUp delay3">
-							<div>
-								<img data-src="images/ic_effectiveness_2_bottom.svg" alt="" class="icon lazyload">
-								<div class="name">95% пациентов без фармакотерапии</div>
-								<div>не могут достичь успеха в снижении веса</div>
-							</div>
-						</div>
-					</div>
-
-					<img data-src="images/bg_wave2.png" alt="" class="bg lazyload">
-				</section>
-
-
-				<section class="app_scheme blue">
-					<div class="cont">
-						<div class="block_title">Удобная схема применения</div>
-
-						<div class="row">
-							<div class="tablet animate fadeInLeft">
-								<div class="amount">1</div>
-								<div>Таблетка<br> в день</div>
+						<div class="program">
+							<div class="logo">
+								<img data-src="images/program_logo2.png" alt="" class="lazyload">
 							</div>
 
-							<div class="desc animate fadeInRight">
-								<p>Следует принимать утром, не разжевывая и запивая достаточным количеством жидкости (стакан воды).</p>
+							<div class="data">
+								<div class="program_name">ВСЕРОССИЙСКАЯ НАБЛЮДАТЕЛЬНАЯ ПРОГРАММА «ВЕСНА»</div>
 
-								<p>Можно принимать как натощак, так и сочетать с приемом пищи.</p>
+								<div class="text_block">
+									<p>Всероссийская наблюдательная неинтервенционная программа мониторинга безопасности применения препарата Редуксин® (сибутрамин + МКЦ) для снижения массы тела и сохранения достигнутого уменьшения веса при 6-месячном курсе медикаментозной терапии больных с алиментарным ожирением в рутинной клинической практике («Весна»)</p>
+
+									<p>Под эгидой ГБОУ ДПО «Российская медицинская академия последипломного образования» МЗ РФ, главный исследователь Аметов А.С.</p>
+
+									<p><b style="color: #406194;">1520 врачей</b> различных специальностей: эндокринологи, терапевты, гастроэнтерологи, гинекологи, неврологи и кардиологи</p>
+
+									<p><b style="color: #406194;">34 719 пациентов</b></p>
+
+									<p><b style="color: #406194;">52 города РФ</b></p>
+								</div>
+
+								<div class="results">
+									<div class="title">ОСНОВНЫЕ РЕЗУЛЬТАТЫ:</div>
+
+									<div class="text_block">
+										<p><b>На фоне терапии Редуксином<sup>&reg;</sup></b></p>
+
+										<ul>
+											<li><b style="color: #406194;">Более 90%</b> достоверно снизили вес (в среднем более, чем на 10 кг)</li>
+											<li><b style="color: #406194;">Почти 80%</b> пациентов выработали правильные привычки питания и возможность управления чувством голода</li>
+											<li><b style="color: #406194;">70% пациентов</b> добились нормализации обмена веществ : улучшились показатели углеводного и липидного обменов</li>
+											<li>Отмечен <b style="color: #406194;">благоприятный профиль безопасности</b></li>
+										</ul>
+									</div>
+								</div>
+
+								<div class="download">
+									<div><a href="/">
+										<div class="icon">
+											<img data-src="images/ic_pdf.png" alt="" class="lazyload">
+										</div>
+
+										<span>Отчет национального координатора Всероссийской наблюдательной программы «Весна»</span>
+									</a></div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</section>
 
 
-				<section class="add_question blue animate fadeInUp delay">
+				<section class="add_question bg_white animate fadeInUp">
 					<div class="cont">
 						<button class="btn modal_btn" data-modal="#question_modal">
-							<img data-src="images/ic_question2.png" alt="" class="lazyload">
+							<img data-src="images/ic_question.png" alt="" class="lazyload">
 							<span>Задать вопрос о препарате</span>
 						</button>
 					</div>
@@ -263,7 +210,7 @@
 
 
 			<footer>
-				<section class="notes bg2">
+				<section class="notes">
 					<button class="btn">
 						<div class="cont row">
 							<span>Показать примечания</span>
