Доработки + новая страница

--- a/about.html
+++ b/about.html
@@ -230,6 +230,13 @@
 
 
 							<aside>
+								<div class="download">
+									<div><a href="/">
+										<img data-src="images/ic_download.png" alt="" class="icon lazyload">
+										<span>Скачать инструкцию</span>
+									</a></div>
+								</div>
+
 								<div class="links sticky">
 									<div><button class="scroll_btn" data-anchor="#anchor1">Инструкция по применению</button></div>
 									<div><button class="scroll_btn" data-anchor="#anchor2">Регистрационный номер</button></div>
