--- a/why.html
+++ b/why.html
@@ -107,6 +107,10 @@
 								</div>
 
 								<div>Избыточное потребление пищи</div>
+
+								<div class="tooltip">
+									<b>При низком уровне физической активности</b> сложно удерживать нормальную массу тела даже при ограничен- ном и сбалансированном питании. Физическая актив- ность является не только способом расхода энергии, она важна для обменных процессов и здорового функционирования многих систем организма.
+								</div>
 							</div>
 
 							<div class="item animate fadeInUp delay2">
@@ -116,6 +120,10 @@
 								</div>
 
 								<div>Нарушение пищевого поведения</div>
+
+								<div class="tooltip">
+									<b>При низком уровне физической активности</b> сложно удерживать нормальную массу тела даже при ограничен- ном и сбалансированном питании. Физическая актив- ность является не только способом расхода энергии, она важна для обменных процессов и здорового функционирования многих систем организма.
+								</div>
 							</div>
 
 							<div class="item animate fadeInUp delay3">
@@ -125,6 +133,10 @@
 								</div>
 
 								<div>Низкая физическая активность</div>
+
+								<div class="tooltip">
+									<b>При низком уровне физической активности</b> сложно удерживать нормальную массу тела даже при ограничен- ном и сбалансированном питании. Физическая актив- ность является не только способом расхода энергии, она важна для обменных процессов и здорового функционирования многих систем организма.
+								</div>
 							</div>
 
 							<div class="item animate fadeInUp delay4">
@@ -134,6 +146,10 @@
 								</div>
 
 								<div>Наследственный фактор</div>
+
+								<div class="tooltip">
+									<b>При низком уровне физической активности</b> сложно удерживать нормальную массу тела даже при ограничен- ном и сбалансированном питании. Физическая актив- ность является не только способом расхода энергии, она важна для обменных процессов и здорового функционирования многих систем организма.
+								</div>
 							</div>
 
 							<div class="item animate fadeInUp delay5">
@@ -143,6 +159,10 @@
 								</div>
 
 								<div>Хронический стресс</div>
+
+								<div class="tooltip">
+									<b>При низком уровне физической активности</b> сложно удерживать нормальную массу тела даже при ограничен- ном и сбалансированном питании. Физическая актив- ность является не только способом расхода энергии, она важна для обменных процессов и здорового функционирования многих систем организма.
+								</div>
 							</div>
 
 							<div class="item animate fadeInUp delay6">
@@ -152,6 +172,10 @@
 								</div>
 
 								<div>Эндокринное заболевание</div>
+
+								<div class="tooltip">
+									<b>При низком уровне физической активности</b> сложно удерживать нормальную массу тела даже при ограничен- ном и сбалансированном питании. Физическая актив- ность является не только способом расхода энергии, она важна для обменных процессов и здорового функционирования многих систем организма.
+								</div>
 							</div>
 						</div>
 					</div>
@@ -180,14 +204,18 @@
 
 								<div class="desc">Уменьшение калорийности потребляемой пищи на 500-700 ккал/день от физиологической потребности с учетом массы тела, возраста и пола</div>
 
-								<div class="link">
-									<a href="/">
+								<div class="spoler_btn">
+									<button class="btn">
 										<div class="icon">
 											<img data-src="images/ic_plus.svg" alt="" class="lazyload">
+											<img src="images/ic_minus.svg" alt="">
 										</div>
 										<span>Подробнее</span>
-									</a>
+										<span>Скрыть</span>
+									</button>
 								</div>
+
+								<div class="desc hide">Такое снижение калорийности приводит к уменьшению массы тела до 0,5 кг в неделю. Однако часто на этом фоне происходит замедление метаболизма из-за чего потеря массы тела приостанавливается. А так же зачастую в реальной жизни очень сложно следовать рекомендациям по уменьшению калоража пищи. По этому для поддержки пациентов врачи назначают специализированные препараты, например Редуксин Форте.</div>
 							</div>
 
 							<div class="item animate fadeInRight">
@@ -205,14 +233,18 @@
 
 								<div class="desc">Регулярные аэробные физические упражнения продолжительностью не менее 150 минут в неделю, что эквивалентно 30 мин в большинство из дней</div>
 
-								<div class="link">
-									<a href="/">
+								<div class="spoler_btn">
+									<button class="btn">
 										<div class="icon">
 											<img data-src="images/ic_plus.svg" alt="" class="lazyload">
+											<img src="images/ic_minus.svg" alt="">
 										</div>
 										<span>Подробнее</span>
-									</a>
+										<span>Скрыть</span>
+									</button>
 								</div>
+
+								<div class="desc hide">Такое снижение калорийности приводит к уменьшению массы тела до 0,5 кг в неделю. Однако часто на этом фоне происходит замедление метаболизма из-за чего потеря массы тела приостанавливается. А так же зачастую в реальной жизни очень сложно следовать рекомендациям по уменьшению калоража пищи. По этому для поддержки пациентов врачи назначают специализированные препараты, например Редуксин Форте.</div>
 							</div>
 						</div>
 					</div>
