--- a/demo_links.html
+++ b/demo_links.html
@@ -193,6 +193,7 @@
 				<li><a href="./why.html" target="_blank">ПОЧЕМУ ВЕС НЕ СНИЖАЕТСЯ?</a></li>
 				<li><a href="./programs.html" target="_blank">НАБЛЮДАТЕЛЬНЫЕ ПРОГРАММЫ</a></li>
 				<li><a href="./covid_19.html" target="_blank">ОЖИРЕНИЕ И COVID-19</a></li>
+				<li><a href="./buy.html" target="_blank">МЫ ПРЕДСТАВЛЕНЫ</a></li>
 			</ol>
 		</div>
 	</body>
