--- a/demo_links.html
+++ b/demo_links.html
@@ -194,6 +194,8 @@
 				<li><a href="./programs.html" target="_blank">НАБЛЮДАТЕЛЬНЫЕ ПРОГРАММЫ</a></li>
 				<li><a href="./covid_19.html" target="_blank">ОЖИРЕНИЕ И COVID-19</a></li>
 				<li><a href="./buy.html" target="_blank">МЫ ПРЕДСТАВЛЕНЫ</a></li>
+				<li><a href="./articles.html" target="_blank">Статьи</a></li>
+				<li><a href="./article.html" target="_blank">Статья</a></li>
 			</ol>
 		</div>
 	</body>
