--- a/articles.html
+++ b/articles.html
@@ -110,7 +110,7 @@
 										<a href="/">Одна из важных задач для достижения любой цели – понимание</a>
 									</div>
 
-									<div class="desc">Одна из важных задач для достижения любой цели – понять, какое желание человек хочет реализовать.</div>
+									<div class="desc">Одна из важных задач для достижения любой цели – понять, какое желание человек хочет реализовать. Одна из важных задач для достижения любой цели – понять, какое желание человек хочет реализовать.</div>
 
 									<div class="link">
 										<a href="/">Подробнее</a>
